# scopewise

./: .gitignore  README.md  docker-compose.yml  render.yaml
.do/: app.yaml
ai/: .env.example  .gitignore  .mypy.ini  Dockerfile  compose.yaml  pyproject.toml  ruff.toml
ai/alembic/: env.py
ai/alembic/versions/: 3cb799aa1ec5_add_scope_models.py  4d2c8f5e9a1b_add_research_models.py  f2e984956018_test_migration_generation.py
ai/app/: __init__.py  config.py  logger.py  main.py
ai/app/agents/: __init__.py  llm_factory.py  pipeline.py  retrievers.py  runner.py  schemas.py  service.py  template_loader.py  tools.py
ai/app/agents/templates/: _system.j2  check_resources.j2  classify.j2  generate_scope.j2  market_research.j2  risks.j2  search_firm_history.j2
ai/app/database/: __init__.py  models.py
ai/app/middleware/: __init__.py
ai/app/routes/: pipeline.py
ai/app/schemas/: .py  user.py
ai/chroma_db/: chroma.sqlite3
ai/scripts/: seed_projects.py
backend/: .env.example  Dockerfile
backend/app/Http/Controllers/: ScopePipelineController.php
backend/app/Http/Requests/: PipelineRunRequest.php
backend/app/Services/: PythonService.php
backend/config/: services.php
backend/routes/: api.php
frontend/: DESIGN_SYSTEM.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/assets/: base.css  design-tokens.css  main.css
frontend/src/components/: DiscoveryForm.vue  ScopeDocumentViewer.vue
frontend/src/components/shared/: AppAvatar.vue  AppDivider.vue  AppNav.vue  AppToast.vue  AppTooltip.vue  BudgetRangeSelector.vue  (+10 more)
frontend/src/composables/: useAgentStream.ts  useTheme.ts
frontend/src/locales/: en.json  es.json
frontend/src/router/: index.ts
frontend/src/stores/: discovery.ts  theme.ts
(+5 files in other folders)
