[project]
name = "scopewise"
version = "0.1.0"
description = "Modern Python learning project with optimal tech stack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    # Authentication & Security
    "pyjwt>=2.9.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "email-validator>=2.0.0",
    # Database & Migrations
    "alembic>=1.17.0",
    # Enterprise Features
    "temporalio>=1.15.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-openrouter>=0.2.3",
    "openai>=1.12.0",
    # External Integrations
    "boto3>=1.34.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "aiohttp>=3.12.15",
    "requests>=2.32.4",
    "pytz>=2023.4",
    "openpyxl>=3.1.5",
    # Utilities
    "python-multipart>=0.0.6",
    "pydantic>=2.13.4",
    "jinja2>=3.1.6",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.mypy]
strict=true
files = ["app"]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scopewise"]

[tool.coverage.report]
show_missing = true
skip_covered = false
